# Market-Data-Project

./: .gitignore  CMakeLists.txt  TODO.txt  vcpkg.json
include/: MarketDataHandler.hpp  MarketDepthMessage.hpp  MessageQueue.hpp  MessageQueueConsumer.hpp  Order.hpp  TopOfBook.hpp  WebSocketManager.hpp  hello_world.hpp  messageQueue.hpp
include/DataProcessing/: BidAskVolumeRatio.hpp  BidAskVolumeRatioTests.hpp  DataProcessor.hpp  Greek.hpp
include/DataProcessing/Greeks/: Greek.hpp  GreekName.hpp
include/DataProcessing/Metrics/: BidAskVolumeRatio.hpp  Metric.hpp  MetricName.hpp
include/MessageHandling/: MarketDepthMessage.hpp  Order.hpp  OrderFactory.hpp  TopOfBook.hpp
include/MessageQueue/: MessageQueue.hpp  MessageQueueConsumer.hpp
include/Order/: Order.cpp  Order.hpp  OrderExpiry.hpp  OrderSide.hpp  OrderType.hpp
src/: MarketDataHandler.cpp  MarketDepthMessage.cpp  Order.cpp  OrderFactory.cpp  TopOfBook.cpp  WebSocketClient.cpp  WebSocketManager.cpp  hello_world.cpp  main.cpp
src/DataProcessing/: BidAskVolumeRatio.cpp  BidAskVolumeRatioTests.cpp  DataProcessor.cpp
src/MessageHandling/: MarketDepthMessage.cpp  Order.cpp  OrderFactory.cpp  TopOfBook.cpp
src/Order/: Order.cpp
src/WebConnection/: WebSocketClient.cpp
tests/: CMakeLists.txt  MessageQueueTests.cpp
tests/DataProcessing/: BidAskVolumeRatioTests.cpp
tests/MessageQueue/: MessageQueueTests.cpp
